--- a/src/styles.css
+++ b/src/styles.css
@@ -179,10 +179,6 @@ input {
   gap: 10px;
   padding: 10px;
 }
-.m-cell-submit-btn {
-  margin: 10px;
-  text-align: end;
-}
 .m-cell-content-header-big {
   display: flex;
   justify-content: space-between;
@@ -192,4 +188,24 @@ input {
 .m-cell-content-header-big h3 {
   font-size: 1.3rem;
   margin: 0;
+}
+.readonly-select {
+  pointer-events: none !important;
+}
+.select-container {
+  position: relative;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: 1;
+  border: none;
+}
+.m-button-groups{
+  display: flex;
+  gap: 10px;
 }
