--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -40,7 +40,9 @@
             }}</mat-icon>
           </button>
         </mat-form-field>
-        <button (click)="signIn()" class="btn btn-m-primary" autofocus>Giriş Yap</button>
+        <button (click)="signIn()" class="btn btn-m-primary" autofocus>
+          Giriş Yap
+        </button>
       </div>
     </div>
   </div>
